Updated .jpg image. Line 11 Error.

--- a/recipes/broccoli_cauliflower_casserole.html
+++ b/recipes/broccoli_cauliflower_casserole.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Broccoli Cauliflower Casserole</title>
 </head>
 <a href="../index.html">Home</a>
 <body>
@@ -11,7 +11,7 @@
     <img src="../images/broccoli cauliflower.jpg" height="310" width="310">
     <h2>Where Healthy Meets Delicious.</h2>
     <p>This simple, easy to make casserole is not only filling, but also gives you the ease of knowing that you are eating healthy. Whether you are feeding for yourself or for your loved ones, this recipe can be mainpulated in any way you like. Either way, it is sure to go off without a hit.</p>
-    <h2>Ingredients</h2>
+    <h2><em>Ingredients</em></h2>
     <ul>
         <li>2 Cups Broccoli</li>
         <li>2 Cups Cauliflower</li>
@@ -22,7 +22,7 @@
         <li>1/2 Cup Butter, melted</li>
         <li>1 (15 ounce) package seasoned croutons, crushed</li>
     </ul>
-    <h3>Steps</h3>
+    <h3><em>Steps</em></h3>
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C)</li>
         <li>Place broccoli and cauliflower in separate saucepans, cover with water, and bring to a boil; cook until tender, 3 to 4 minutes. Drain and arrange in an 11x7-inch baking dish.</li>
