--- a/recipes/homemade_blueberry_pie.html
+++ b/recipes/homemade_blueberry_pie.html
@@ -8,9 +8,9 @@
 <a href="../index.html">Home</a>
 <body>
     <h1>Homemade Blueberry Pie</h1>
-    <img src="/images/Blueberry Pie.webp" height="310" width="310">
+    <img src="/images/Blueberry Pie.jpg" height="310" width="310">
     <p>Whether you are just enjoying the company of family and friends or wanting to "wow" your co-workers at the company party, this homemade blueberry pie recipe does not disappoint.</p>
-    <h2>Ingredients</h2>
+    <h2><em>Ingredients</em></h2>
    <ul>
     <li>Sugar</li>
     <li>Cornstarch</li>
@@ -20,7 +20,7 @@
     <li>Pie Crust</li>
     <li>Butter</li>
    </ul>
-   <h2>Steps</h2>
+   <h2><em>Steps</em></h2>
    <ol>
     <li>Sprinkle the berries with sugar, cornstarch, cinnamon, and salt.</li>
     <li>Pour the filling into the bottom pie crust and finish with a lattice crust on top.</li>
