--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
        <li><a href="recipes/broccoli_cauliflower_casserole.html">Broccoli Cauliflower Casserole</a></li> 
         <li><a href="recipes/homemade_blueberry_pie.html">Homemade Blueberry Pie</a></li>
+        <li><a href="recipes/garlic_chicken_stir_fry.html">Garlic Chicken Stir Fry</a></li>
     </ul>
     
 </body>
